--- a/imports/ui/components/navbar.component.html
+++ b/imports/ui/components/navbar.component.html
@@ -11,7 +11,7 @@
                         {{/if}}
                     </div>
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <span id="nav-toggle" class="nav-toggle {{navbarToggle}}">
+                    <span id="nav-toggle" class="nav-toggle {{active}}">
                         <span></span>
                         <span></span>
                         <span></span>
