--- a/imports/ui/components/logo.component.html
+++ b/imports/ui/components/logo.component.html
@@ -1,3 +1,4 @@
 <template name="logo">
-    <img src="{{assets 'img/logo.png'}}" alt="Eldir.au">
+    <!--<img src="{{assets 'img/logo.png'}}" alt="Eldir.au">-->
+    Eldir.au
 </template>
