--- a/imports/ui/components/navbar.component.html
+++ b/imports/ui/components/navbar.component.html
@@ -4,7 +4,7 @@
             <nav class="nav">
                 <div class="container">
                     <div class="nav-left">
-                        <a class="nav-item is-brand" href="{{pathFor 'public.index'}}">
+                        <a class="nav-item is-brand" href="{{pathFor 'rea.index'}}">
                             {{> logo}}
                         </a>
                         {{#if currentUser}}
