--- a/imports/ui/rea/albums/view.less
+++ b/imports/ui/rea/albums/view.less
@@ -3,10 +3,11 @@
     flex-flow: row wrap;
     align-items: flex-start;
     justify-content: space-between;
+    margin-bottom: 10px;
 
     &__item {
         height: 200px;
-        margin: .4vw 0;
+        margin: .4vw 5px .4vw;
         flex: auto;
 
         img {
