--- a/client/main.less
+++ b/client/main.less
@@ -1,5 +1,12 @@
+@import "../imports/ui/stylesheets/mixins";
+
 // Global stylesheets
+@import "../imports/ui/stylesheets/base";
 @import "../imports/ui/stylesheets/custom";
 
 // Template stylesheets
 @import "../imports/ui/rea/albums/view";
+
+// Components stylesheets
+@import "../imports/ui/components/uploader.component.less";
+@import "../imports/ui/rea/albums/modals/photo.modal.less";
