--- a/imports/ui/rea/albums/view.less
+++ b/imports/ui/rea/albums/view.less
@@ -2,16 +2,28 @@
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 10px;
 
     &__item {
-        height: 200px;
-        margin: .4vw 5px .4vw;
-        flex: auto;
+        position: relative;
+        height: 250px;
+        width: calc(100% / 4);
+        padding: .1vw;
+        margin-bottom: 1vw;
 
-        img {
-            max-height: 100%;
+        background-origin: content-box;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-image: url('/images/imagenotfound.svg');
+
+        a {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
         }
     }
 }
