--- a/imports/ui/rea/albums/modals/photo.modal.less
+++ b/imports/ui/rea/albums/modals/photo.modal.less
@@ -23,31 +23,31 @@
                 background-repeat: no-repeat;
                 background-size: contain;
                 margin: 0 5px;
-
-                a {
-                    position: absolute;
-                    top: 0;
-                    bottom: 0;
-                    right: 0;
-                    left: 0;
-                }
-            }
-
-            .previous, .next {
-                font-size: 9rem;
-                padding: 0;
-                margin: 0;
-                width: 5%;
                 display: flex;
-                flex-direction: row;
-                justify-content: center;
+                flex-flow: row nowrap;
                 align-items: stretch;
 
-                a {
-                    color: rgba(255, 255, 255, 0.7);
+                .photo-link {
+                    flex-grow: 1;
+                }
+
+                .previous, .next {
+                    font-size: 9rem;
+                    padding: 0;
+                    margin: 0 5px;
+                    width: 5%;
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: row;
                     justify-content: center;
+                    align-items: stretch;
+
+                    a {
+                        color: rgba(253, 253, 253, 1);
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        text-shadow: 0 0 6px rgba(7, 7, 7, 0.8);
+                    }
                 }
             }
         }
