--- a/imports/ui/components/icon.component.html
+++ b/imports/ui/components/icon.component.html
@@ -1,5 +1,5 @@
 <template name="icon">
-    <span class="icon {{size}}">
+    <span class="icon {{size}}" style="color: {{color}};">
         <i class="fa fa-{{name}}"></i>
     </span>
 </template>
