--- a/imports/ui/rea/albums/components/share.button.html
+++ b/imports/ui/rea/albums/components/share.button.html
@@ -1,5 +1,5 @@
 <template name="rea.albums.share.button">
-    <button class="button is-info {{classes}} js-share-album">
+    <button class="button is-{{type}} {{classes}} js-share-album">
         {{text}}
     </button>
 </template>
