--- a/imports/ui/stylesheets/custom.less
+++ b/imports/ui/stylesheets/custom.less
@@ -1,9 +1,5 @@
 .modal {
-    .modal-content.is-rounded {
-        .border-radius(5px);
-    }
-
-    .modal-card.is-rounded {
+    .modal-content.is-rounded, .modal-card.is-rounded {
         .border-radius(5px);
     }
 }
