--- a/imports/ui/components/navbar.component.html
+++ b/imports/ui/components/navbar.component.html
@@ -26,10 +26,11 @@
 
                     <div class="nav-right nav-menu {{active}}">
                         {{#with currentUser}}
-                            <a class="nav-item">
+                            <a href="{{pathFor 'rea.profile'}}" class="nav-item">
                                 <img src="{{gravatarUrl}}" alt="gravatar">
+                                &nbsp;
+                                {{fullName}}
                             </a>
-                            <span class="nav-item">{{fullName}}</span>
                             <a class="nav-item js-logout" href="#">{{> icon name='sign-out' size='is-small'}}</a>
                         {{else}}
                             <a href="{{pathFor 'public.auth.login'}}" class="nav-item">
