--- a/imports/ui/components/sidemenu.component.html
+++ b/imports/ui/components/sidemenu.component.html
@@ -13,8 +13,8 @@
                 Albums
             </p>
             <ul class="menu-list">
-                <li><a href="{{pathFor 'rea.albums.my-albums'}}">My albums ({{myAlbumsCount}})</a></li>
-                <li><a href="{{pathFor 'rea.albums.shared-with-me'}}">Shared with me ({{albumsSharedCount}})</a></li>
+                <li><a href="{{pathFor 'rea.my-albums'}}">My albums ({{myAlbumsCount}})</a></li>
+                <li><a href="{{pathFor 'rea.shared-with-me'}}">Shared with me ({{albumsSharedCount}})</a></li>
             </ul>
         </aside>
     {{/unless}}
