--- a/imports/ui/components/uploader.component.html
+++ b/imports/ui/components/uploader.component.html
@@ -1,10 +1,7 @@
 <template name="uploader">
     <div class="uploader">
-        <form>
-            <input type="file" id="photos" multiple hidden>
-        </form>
         <div class="uploader__header">
-            <div class="heading_title">Uploading to <span class="album_name">{{upload.albumId}}</span></div>
+            <div class="heading_title">Uploading <span class="album_name">{{uploadCount}}/{{filesCount}}</span></div>
             <button class="button is-small reduce">
                 <span class="icon is-small">
                     <i class="fa fa-{{reduceIcon}}"></i>
@@ -13,30 +10,32 @@
         </div>
         <div class="uploader__body {{hidden}}">
             <div class="uploader__body__content">
-                <table class="table is-narrow">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th style="min-width: 200px;">Progress</th>
-                        <th>Speed</th>
-                        <th>Time remaining</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {{#each fileUploader in upload.fileUploaders}}
-                        <tr>
-                            <td>{{fileUploader.file.name}}</td>
-                            <td>
-                                {{#let progress=fileUploader.progress}}
-                                    <progress class="progress is-success" value="{{progress}}" max="100">{{progress}}%</progress>
-                                {{/let}}
-                            </td>
-                            <td>{{fileUploader.estimateSpeed}}</td>
-                            <td>{{fileUploader.estimateTime}}</td>
-                        </tr>
-                    {{/each}}
-                    </tbody>
-                </table>
+                {{#with currentFile}}
+                    <div class="columns">
+                        <div class="column" style="display: flex; align-items: center;">
+                            {{#unless done}}
+                                <progress class="progress is-primary" value="{{progress}}"
+                                          max="100">{{progress}}%
+                                </progress>
+                            {{else}}
+                                <progress class="progress is-primary" value="100"
+                                          max="100">100%
+                                </progress>
+                            {{/unless}}
+                        </div>
+                        <div class="column is-narrow">
+                            <p class="subtitle is-5">
+                                {{#unless done}}
+                                    {{progress}}%
+                                {{else}}
+                                    {{> icon name='check-circle' color='#00d000'}}
+                                {{/unless}}
+                            </p>
+                        </div>
+                    </div>
+                {{else}}
+                    No upload is running
+                {{/with}}
             </div>
             <div class="uploader__body__footer">
                 <div class="control is-grouped">
