--- a/imports/ui/stylesheets/mixins.less
+++ b/imports/ui/stylesheets/mixins.less
@@ -10,7 +10,7 @@
     background-image: linear-gradient(to bottom, @start-color @start-percent, @end-color @end-percent);
 }
 
-.gradient-vertical(@start-color: #555, @end-color: #333, @start-percent: 0%, @end-percent: 100%) {
+.gradient-horizontal(@start-color: #555, @end-color: #333, @start-percent: 0%, @end-percent: 100%) {
     background-image: -webkit-linear-gradient(left, @start-color @start-percent, @end-color @end-percent);
     background-image: -o-linear-gradient(left, @start-color @start-percent, @end-color @end-percent);
     background-image: linear-gradient(to right, @start-color @start-percent, @end-color @end-percent);
