--- a/imports/ui/stylesheets/custom.less
+++ b/imports/ui/stylesheets/custom.less
@@ -1,4 +1,8 @@
 .modal {
+    .modal-background {
+        background-color: rgba(10, 10, 10, 0.6) !important;
+    }
+
     .modal-content.is-rounded, .modal-card.is-rounded {
         .border-radius(5px);
     }
