--- a/imports/ui/components/loading.component.html
+++ b/imports/ui/components/loading.component.html
@@ -1,9 +1,6 @@
 <template name="loading">
-    <div class="section">
-        <div class="container">
-            <h1 class="title has-text-centered">
-                {{> icon name='cog fa-spin fa-fw' size='is-medium'}} Loading...
-            </h1>
-        </div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+        <div class="holy-molly">Loading...</div>
     </div>
 </template>
