--- a/imports/ui/rea/albums/gallery.less
+++ b/imports/ui/rea/albums/gallery.less
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin-bottom: 10px;
 
     &__item {
@@ -13,6 +13,7 @@
         position: relative;
         height: 250px;
         min-width: 250px;
+        max-width: 270px;
         padding: 0;
         margin: 0 1px 5px;
         margin-bottom: 1vw;
@@ -43,14 +44,16 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
-            padding: 8px 5px;
+            padding: 10px 8px;
             vertical-align: middle;
             font-size: 11px;
             opacity: 0;
+            color: whitesmoke;
+            .gradient-vertical(transparent, rgba(0, 0, 0, 0.4));
             .transition(all, 500ms);
 
             p {
-                margin: 0 5px;
+                margin: 0 7px;
             }
         }
 
