--- a/imports/ui/rea/albums/modals/slider.modal.less
+++ b/imports/ui/rea/albums/modals/slider.modal.less
@@ -1,8 +1,8 @@
 .photo_modal {
     .modal-content {
-        width: 97%;
+        width: 100%;
         height: 97%;
-        margin: 0;
+        margin: 0 70px;
         padding: 0;
         display: flex;
         flex-flow: row wrap;
@@ -53,26 +53,20 @@
         }
 
         .photo-details {
-            width: 350px;
+            width: 360px;
             background: white;
             padding: 10px 10px 0 20px;
             display: flex;
             flex-direction: column;
 
-            .modal-close {
-                align-self: flex-end;
-                position: relative;
-                top: 0;
-                right: 0;
-                background: transparent;
-                color: rgba(0, 0, 0, 0.8);
-
-                &:after, &:before {
-                    background: rgba(0, 0, 0, 0.4);
+            .comment {
+                .media-right > .delete {
+                    opacity: 0;
+                    .transition(all, 500ms);
                 }
 
-                &:hover {
-                    background: transparent;
+                &:hover .media-right > .delete {
+                    opacity: 1;
                 }
             }
         }
