--- a/imports/ui/components/logo.component.html
+++ b/imports/ui/components/logo.component.html
@@ -1,4 +1,3 @@
 <template name="logo">
-    <!--<img src="{{assets 'img/logo.png'}}" alt="Eldir.au">-->
-    Eldir.au
+    <img src="{{assets 'assets/images/logo.jpg'}}" alt="Eldirau">
 </template>
