--- a/imports/ui/components/navbar.component.html
+++ b/imports/ui/components/navbar.component.html
@@ -4,19 +4,22 @@
             <nav class="nav">
                 <div class="container">
                     <div class="nav-left">
-                        <a class="nav-item is-brand" href="{{pathFor 'rea.index'}}">
+                        <span class="nav-item is-brand">
                             {{> logo}}
-                        </a>
+                        </span>
                         {{#with currentUser}}
+                            <a class="nav-item is-tab {{isActiveRoute regex='rea.index|rea.my-albums|rea.shared-with-me'}}" href="{{pathFor 'rea.index'}}">
+                                Home
+                            </a>
                             {{#if hasRole 'ALBUM' _id}}
-                                <span class="nav-item">
+                                <span class="nav-item is-tab {{isActiveRoute regex='rea.albums'}}">
                                     <a href="#" class="button is-primary js-create-album">
                                         New album
                                     </a>
                                 </span>
                             {{/if}}
                             {{#if hasRole 'ADMIN' _id}}
-                                <a href="{{pathFor 'admin'}}" class="nav-item">
+                                <a href="{{pathFor 'admin'}}" class="nav-item is-tab {{isActiveRoute regex='admin'}}">
                                     Administration
                                 </a>
                             {{/if}}
@@ -38,17 +41,14 @@
                             </a>
                             <a class="nav-item js-logout" href="#">{{> icon name='sign-out' size='is-small'}}</a>
                         {{else}}
-                            <a href="{{pathFor 'public.auth.login'}}" class="nav-item">
-                                {{> icon name='sign-in' size='is-small'}}
+                            <a href="{{pathFor 'public.auth.login'}}"
+                               class="nav-item is-tab {{isActiveRoute name='public.auth.login'}}">
                                 <span>Login</span>
                             </a>
-                            <span class="nav-item">
-                              <a href="{{pathFor 'public.auth.register'}}"
-                                 class="button is-primary is-outlined is-inverted">
-                                {{> icon name='registered' size='is-small'}}
-                                  <span>Register</span>
-                              </a>
-                            </span>
+                            <a href="{{pathFor 'public.auth.register'}}"
+                               class="nav-item is-tab {{isActiveRoute name='public.auth.register'}}">
+                                <span>Register</span>
+                            </a>
                         {{/with}}
                     </div>
                 </div>
