--- a/imports/ui/rea/albums/components/edit.button.html
+++ b/imports/ui/rea/albums/components/edit.button.html
@@ -1,5 +1,5 @@
 <template name="rea.albums.edit.button">
-    <button class="button is-{{type}} {{classes}} js-edit-album">
+    <button class="button {{#if type}}is-{{type}}{{/if}} {{classes}} js-edit-album">
         {{text}}
     </button>
 </template>
