--- a/imports/ui/stylesheets/helpers.less
+++ b/imports/ui/stylesheets/helpers.less
@@ -1,4 +1,13 @@
 .text-overflow-hidden {
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.debug * {
+    outline: 1px solid red;
+}
+
+.bottom-padding {
+    padding-bottom: 70px !important;
 }
