--- a/imports/ui/stylesheets/main.less
+++ b/imports/ui/stylesheets/main.less
@@ -1,3 +1,4 @@
+@import "variables";
 @import "mixins";
 
 // Global stylesheets
@@ -11,5 +12,5 @@
 // Components stylesheets
 @import "../components/loading.component.less";
 @import "../components/uploader.component.less";
-
+@import "../rea/albums/components/card.component.less";
 @import "../rea/albums/modals/slider.modal.less";
