--- a/imports/ui/rea/albums/gallery.less
+++ b/imports/ui/rea/albums/gallery.less
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 10px;
 
     &__item {
@@ -11,9 +11,8 @@
         flex-direction: column;
         justify-content: space-between;
         position: relative;
-        height: 250px;
-        min-width: 250px;
-        max-width: 270px;
+        height: 190px;
+        width: 270px;
         padding: 0;
         margin: 0 1px 5px;
         margin-bottom: 1vw;
@@ -44,12 +43,14 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
+            height: 50%;
+            align-items: flex-end;
             padding: 10px 8px;
             vertical-align: middle;
             font-size: 11px;
             opacity: 0;
             color: whitesmoke;
-            .gradient-vertical(transparent, rgba(0, 0, 0, 0.4));
+            .gradient-vertical(transparent, rgba(0, 0, 0, 0.5));
             .transition(all, 500ms);
 
             p {
